@@ -1,5 +1,8 @@
 2006-05-31  David Reveman  <davidr@novell.com>
 
+	* plugins/switcher.c (switchPaintWindow): Make sure selected window is
+	not clipped incorrectly when some window is transformed. (bnc 179828)
+
 	* plugins/move.c (moveHandleEvent): Initialize xRoot and yRoot.
 	(bnc 179902)
 
